---
source: spade-tests/src/typeinference.rs
---
struct X {a: bool}

pipeline(1) a(clk: clk) -> bool {
        let y = stage(+1).x.b;
    reg;
        let x = X(false);
        y
}


error: X has no field named b
  ┌─ testinput:4:29
  │
4 │         let y = stage(+1).x.b;
  │                             ^ Not a field of X


